Fixed Push Notifications.

--- a/Roommates/Roommates-Info.plist
+++ b/Roommates/Roommates-Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>RealKode.Roommates</string>
+	<string>com.gjermundbjaanes.apps.Roommates</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
